--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
   <!-- Chat Modal -->
   <div id="chatModal">
     <button id="closeChat">×</button>
-    <!-- Replace the src with your AWS QBusiness embed URL -->
+    <!-- Embedded AWS QBusiness AI -->
     <iframe 
-      src="https://s3n1rtfg.chat.qbusiness.us-east-1.on.aws?code=YOUR_TEMP_URL_HERE" 
+      src="https://s3n1rtfg.chat.qbusiness.us-east-1.on.aws?code=c582f15a-a734-4549-93ec-3b5f857706e6" 
       width="100%" height="100%" style="border:none;">
     </iframe>
   </div>
