--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <button id="closeChat">×</button>
     <!-- Embedded AWS QBusiness AI -->
     <iframe 
-      src="https://s3n1rtfg.chat.qbusiness.us-east-1.on.aws?code=7146afe2-5652-41e8-adbb-750176d05b09" 
+      src="hhttps://s3n1rtfg.chat.qbusiness.us-east-1.on.aws/web-experience/b7786a9a-7bec-4d17-b6b1-dc6c1e964347 " 
       width="100%" height="100%" style="border:none;">
     </iframe>
   </div>
