--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Assistant</title>
-  <style>
-    .assistant-frame {
-      width: 100%;
-      height: 600px;
-      border: none;
-      border-radius: 12px; /* optional rounded corners */
-    }
-  </style>
+  <title>AI Agent</title>
+  
 </head>
 <body>
-  <h2>AI Assistant</h2>
-  
+   
   <iframe 
     class="assistant-frame"
     src="https://3khnomrk.chat.qbusiness.us-east-1.on.aws?code=9d1d0f72-8ee1-41b4-ba4a-09837bfdaa05"
