added new styles

--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Agent</title>
-  
+  <title>AI Assistant</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-   
   <iframe 
-    class="assistant-frame"
     src="https://3khnomrk.chat.qbusiness.us-east-1.on.aws?code=9d1d0f72-8ee1-41b4-ba4a-09837bfdaa05"
     title="AI Assistant">
   </iframe>
