--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Assistant</title>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       width: 100%;
+      height: 100%;
+      overflow: hidden; /* Prevent scrollbars */
     }
-    iframe {
+    #assistant-frame {
       border: none;
       width: 100%;
       height: 100%;
@@ -20,9 +21,13 @@
   </style>
 </head>
 <body>
-  <iframe 
+  <!-- Replace the src URL with your latest Q Business Web Experience embed URL -->
+  <iframe
+    id="assistant-frame"
     src="https://3khnomrk.chat.qbusiness.us-east-1.on.aws?code=9d1d0f72-8ee1-41b4-ba4a-09837bfdaa05"
-    title="AI Assistant">
-  </iframe>
+    title="AI Assistant"
+    allow="clipboard-read; clipboard-write; microphone; camera"
+    sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
+  ></iframe>
 </body>
 </html>
