web experience url changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden; /* Prevent scrollbars */
+      overflow: hidden; 
     }
     #assistant-frame {
       border: none;
@@ -24,7 +24,7 @@
   <!-- Replace the src URL with your latest Q Business Web Experience embed URL -->
   <iframe
     id="assistant-frame"
-    src="https://3khnomrk.chat.qbusiness.us-east-1.on.aws?code=9d1d0f72-8ee1-41b4-ba4a-09837bfdaa05"
+    src="https://3khnomrk.chat.qbusiness.us-east-1.on.aws?code=3ce6dbce-79b2-46ee-80c8-07d8f59ac167"
     title="AI Assistant"
     allow="clipboard-read; clipboard-write; microphone; camera"
     sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
